--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/adaptive-icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: assets/adaptive-icon.png
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: assets/adaptive-icon.png
+  min_sdk_android: 21
