ci: run Android APK workflow on push and PR
Updates workflow triggers to run on every push and pull request, while retaining manual dispatch.

--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -1,6 +1,10 @@
 name: Android APK (Flutter)
 
 on:
+  push:
+    branches: ["**"]
+  pull_request:
+    branches: ["**"]
   workflow_dispatch:
 
 permissions:
