fix(ci): set Android NDK 27 in workflow and update theme for Flutter 3.32
- Install NDK 27 in CI to satisfy sqflite_android requirement
- Update theme to use CardThemeData per new Flutter API
- Remove transient Error.md after reading

--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Flutter version
         run: flutter --version
 
+      - name: Install Android NDK 27
+        run: |
+          yes | sdkmanager --licenses
+          sdkmanager --install "ndk;27.0.12077973"
+
       - name: Install dependencies
         run: flutter pub get
 
