--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -25,6 +25,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -36,7 +39,7 @@ jobs:
 
       - name: Install Android NDK 27
         run: |
-          yes | sdkmanager --licenses
+          yes | sdkmanager --licenses || true
           sdkmanager --install "ndk;27.0.12077973"
 
       - name: Install dependencies
@@ -44,6 +47,14 @@ jobs:
 
       - name: Generate Android platform files
         run: flutter create --platforms=android .
+
+      - name: Set NDK version in Gradle
+        run: |
+          if [ -f android/app/build.gradle.kts ]; then
+            sed -i 's/android {/android {\n    ndkVersion = "27.0.12077973"/' android/app/build.gradle.kts
+          elif [ -f android/app/build.gradle ]; then
+            sed -i "s/android {/android {\n    ndkVersion '27.0.12077973'/" android/app/build.gradle
+          fi
 
       - name: Generate launcher icons (Android only)
         run: flutter pub run flutter_launcher_icons:main
