--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -48,6 +48,25 @@ jobs:
       - name: Generate Android platform files
         run: flutter create --platforms=android .
 
+      - name: Apply Android appId, label, permissions, and NDK version
+        run: |
+          # Android package/applicationId and app name
+          if [ -f android/app/build.gradle.kts ]; then
+            sed -i "s/applicationId = \"[^\"]*\"/applicationId = \"com.sleepy.nava\"/" android/app/build.gradle.kts
+          elif [ -f android/app/build.gradle ]; then
+            sed -i "s/applicationId \"[^\"]*\"/applicationId \"com.sleepy.nava\"/" android/app/build.gradle
+          fi
+          if [ -f android/app/src/main/AndroidManifest.xml ]; then
+            sed -i 's/android:label="[^"]*"/android:label="Nava"/' android/app/src/main/AndroidManifest.xml
+            # Add permissions if not present
+            grep -q "RECEIVE_BOOT_COMPLETED" android/app/src/main/AndroidManifest.xml || sed -i 's#</application>#<receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver" android:exported="false"/><receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" android:exported="false"/><uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/></application>#' android/app/src/main/AndroidManifest.xml
+          fi
+          # Enforce NDK version
+          if [ -f android/app/build.gradle.kts ]; then
+            grep -q "ndkVersion" android/app/build.gradle.kts || sed -i 's/android {/android {\n    ndkVersion = "27.0.12077973"/' android/app/build.gradle.kts
+          elif [ -f android/app/build.gradle ]; then
+            grep -q "ndkVersion" android/app/build.gradle || sed -i "s/android {/android {\n    ndkVersion '27.0.12077973'/" android/app/build.gradle
+          fi
       - name: Set NDK version in Gradle
         run: |
           if [ -f android/app/build.gradle.kts ]; then
