--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   intl: ^0.19.0
   collection: ^1.18.0
   cupertino_icons: ^1.0.6
+  flutter_local_notifications: ^17.2.1
+  timezone: ^0.9.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
